--- a/webapp/crawler_app/templates/crawling/crawlerresult_list.html
+++ b/webapp/crawler_app/templates/crawling/crawlerresult_list.html
@@ -1,5 +1,7 @@
 {% load humanize %}
 
+<!-- Icons from Glyphicons: http://glyphicons.com/ -->
+
 <head>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 </head>
