--- a/webapp/crawler_app/templates/crawling/crawlerresult_list.html
+++ b/webapp/crawler_app/templates/crawling/crawlerresult_list.html
@@ -7,16 +7,22 @@
 </head>
 
 <body>
-    {% block header %}
-    <ul class="nav nav-pills" role="tablist">
-        <li role="presentation" class="active"><a href="/crawling/results">Wszystkie</a></li>
-        <li role="presentation"><a href="/crawling/new">Nowe</a></li>
-        <li role="presentation"><a href="/crawling/accepted">Zaakceptowane</a></li>
-        <li role="presentation"><a href="/crawling/ignored">Odrzucone</a></li>
-    </ul>
+    <div class="pull-left">
+        {% block header %}
+        <ul class="nav nav-pills" role="tablist">
+            <li role="presentation" class="active"><a href="/crawling/results">Wszystkie</a></li>
+            <li role="presentation"><a href="/crawling/new">Nowe</a></li>
+            <li role="presentation"><a href="/crawling/accepted">Zaakceptowane</a></li>
+            <li role="presentation"><a href="/crawling/ignored">Odrzucone</a></li>
+        </ul>
 
-    <h2>Wszystkie wyniki crawlingu</h2>
-    {% endblock %}
+        <h2>Wszystkie wyniki crawlingu</h2>
+        {% endblock %}
+    </div>
+
+    <a href="{% url 'django.contrib.auth.views.logout_then_login' %}">
+        <button id="button-logout" type="button" class="btn btn-danger pull-right">Wyloguj</button>
+    </a>
 
     <table class="table table-striped table-bordered table-hover">
 
