--- a/webapp/crawler_app/templates/login.html
+++ b/webapp/crawler_app/templates/login.html
@@ -12,7 +12,7 @@
         {% if form.errors %}
             <div class="alert alert-danger" role="alert">Niezgodna nazwa użytkownika i/lub hasło.</div>
         {% endif %}
-        <input class="form-control" name="username" placeholder="Adres email" required="" autofocus="">
+        <input class="form-control" name="username" placeholder="Użytkownik" required="" autofocus="">
         <input type="password" class="form-control" name="password" placeholder="Hasło" required="">
         <button class="btn btn-lg btn-primary btn-block" type="submit" value="login" >Zaloguj</button>
     </form>
